# rachu-ciach-web

./: .gitignore  README.md  pyproject.toml
apps/budgets/: admin.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
apps/budgets/migrations/: 0001_initial.py  0002_initial.py  0003_remove_budget_type.py  0004_alter_category_unique_together.py  0005_alter_budgetplan_planned_amount.py
apps/budgets/templates/: budget_create.html  budget_detail.html  budget_form.html
apps/budgets/urls/: api.py  ui.py
apps/budgets/views/: api.py  ui.py
apps/core/: forms.py  models.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py
apps/core/templates/: base.html  dashboard.html  login.html  logout.html  register.html
apps/savings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/savings/migrations/: 0001_initial.py  0002_alter_savingssnapshot_balance.py  0003_remove_savingssnapshot_budget.py
apps/savings/urls/: api.py
apps/savings/views/: api.py
apps/transactions/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py  0002_alter_transaction_amount.py  0003_alter_transaction_type.py
config/: settings.py  urls.py
config/settings/: base.py  local.py
tests/: factories.py
tests/test_api/: conftest.py  test_api_categories.py  test_api_transactions.py  test_budget_plans.py  test_budgets.py  test_savings.py  test_transactions.py
tests/test_models/: test_budget.py  test_budget_plan.py  test_category.py  test_savings.py  test_transaction.py
(+7 files in other folders)
